@@ -57,6 +57,9 @@ recommends|https://tools.ietf.org/html/rfc2898#section-4.1> a random salt of at
 least 8 octets.  If you need a cryptographically strong salt, consider
 L<Crypt::URandom>.
 
+The password and salt should encoded as octet strings. If not (i.e. if
+Perl's internal 'UTF8' flag is on), then an exception will be thrown.
+
 The number of iterations defaults to 1000 if not provided.  If the derived
 key length is not provided, it defaults to the output size of the digest
 function.
@@ -72,6 +75,12 @@ sub derive {
     $salt   = '' unless defined $salt;
     $iterations ||= 1000;
     $dk_length  ||= $digest_length;
+
+    # we insist on octet strings for password and salt
+    Carp::croak("password must be an octet string, not a character string")
+      if utf8::is_utf8($passwd);
+    Carp::croak("salt must be an octet string, not a character string")
+      if utf8::is_utf8($salt);
 
     my $key = ( length($passwd) > $block_size ) ? $digester->($passwd) : $passwd;
     my $passes = int( $dk_length / $digest_length );
@@ -176,7 +185,10 @@ sub digest_fcn {
 This function is used internally by PBKDF2::Tiny, but made available in case
 it's useful to someone.
 
-The first two arguments are the data and key inputs to the HMAC function.
+The first two arguments are the data and key inputs to the HMAC function.  Both
+should be encoded as octet strings, as underlying HMAC/digest functions may
+croak or may give unexpected results if Perl's internal UTF-8 flag is on.
+
 B<Note>: if the key is longer than the digest block size, it must be
 preprocessed using the digesting function.
 
